# OpenPrinting_CPD_Libraries

./: .gitignore  CPDBackend.pc.in  CPDFrontend.pc.in  Makefile  Makefile.am  README.md  autogen.sh  configure.ac
SampleFrontend/: pickle_test.c  print_frontend.c
demo/: Makefile  pickle_test.c
examples/: pickle_test.c
lib/: CPDFrontend.h  Makefile.am  frontend_helper.c
lib/interface/: org.openprinting.Backend.xml
src/: CPDBackend.h  CPDBackend.pc  CPDFrontend.pc  common_helper.c  frontend_helper.h
